force-app/main/default/objects/SAJOnboarding__c/SAJOnboarding__c.object-meta.xml
<CustomObject>
    <description>Steps for Project Onboarding</description>
    <label>Onboarding Step</label>
    <nameField>
        <displayFormat>ON-{00000}</displayFormat>
        <label>Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>