force-app/main/default/objects/SAJOnboarding__c/fields/Business_Solution__c.field-meta.xml
<CustomField>
    <fullName>Business_Solution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the master business solution</description>
    <label>Business Solution</label>
    <referenceTo>SAJ_Release__c</referenceTo>
    <relationshipName>Onboardings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>