force-app/main/default/objects/SAJOnboarding__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date Step was completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>