force-app/main/default/objects/SAJOnboarding__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date when the step is due to be completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>