force-app/main/default/objects/SAJOnboarding__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Record more information about the onboarding steps if required</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>