force-app/main/default/objects/SAJOnboarding__c/fields/Onboarding_Step__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Step__c</fullName>
    <description>Onboarding Steps</description>
    <label>Onboarding Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Raise Clarity Project</fullName>
            </value>
            <value>
                <fullName>Citicus Assessment</fullName>
            </value>
            <value>
                <fullName>Information Security Assessment</fullName>
            </value>
            <value>
                <fullName>Design Challenge</fullName>
            </value>
            <value>
                <fullName>Solution Design Document (attached?)</fullName>
            </value>
            <value>
                <fullName>Application Support Level 2 and Level 3</fullName>
            </value>
            <value>
                <fullName>Follow Change and Release</fullName>
            </value>
            <value>
                <fullName>SLA (attached?)</fullName>
            </value>
            <value>
                <fullName>Help file (attached?)</fullName>
            </value>
            <value>
                <fullName>Service Record</fullName>
            </value>
            <value>
                <fullName>Regression Test Pack</fullName>
            </value>
            <value>
                <fullName>Regression Testing</fullName>
            </value>
            <value>
                <fullName>Associate support Assignment Groups</fullName>
            </value>
            <value>
                <fullName>Service Go Live request for change</fullName>
            </value>
            <value>
                <fullName>Network Impact Assessment</fullName>
            </value>
            <value>
                <fullName>Software Asset Management / License Impact</fullName>
            </value>
            <value>
                <fullName>Servie Request Offerings</fullName>
            </value>
            <value>
                <fullName>Create Remedy Group Support</fullName>
            </value>
            <value>
                <fullName>Create Remedy Group Change Approval</fullName>
            </value>
            <value>
                <fullName>Add to chatter group: Application Developments</fullName>
            </value>
            <value>
                <fullName>Add to chatter group: DevOpts Tooling Forum</fullName>
            </value>
            <value>
                <fullName>Add to chatter group: Release Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>