force-app/main/default/objects/SAJOnboarding__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of on-boarding step</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>