force-app/main/default/objects/SAJOnboarding__c/validationRules/Business_Solution_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Solution_Name_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Business_Solution__c)</errorConditionFormula>
    <errorMessage>Business Solution Name Can&apos;t be changed.</errorMessage>
</ValidationRule>